Coverity analysis defect 148847: Data race condition

XMLWordPrintableJSON

    • Networking & Observability
    • Fully Compatible
    • ALL
    • N&O 2025-08-18, N&O 2025-09-01, N&O 2025-09-15
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Data race condition

      The value of the shared data will be determined by the interleaving of thread execution. Thread shared data is accessed without holding an appropriate lock, possibly causing a race condition
      /src/mongo/db/baton.cpp:96: MISSING_LOCK 148847 Accessing "this->_isDead" without holding lock "mongo::<unnamed>::SubBaton._mutex". Elsewhere, "mongo::<unnamed>::SubBaton._isDead" is written to with "SubBaton._mutex" held 1 out of 1 times (1 of these accesses strongly imply that it is necessary).

            Assignee:
            Joseph Prince
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: