SERVER-109688 Acquire SubBaton::_mutex when reading SubBaton::_isDead (#41057)

GitOrigin-RevId: 48f0be98d7a6c550cf9c625f472f0154833fcd79